Create design for item.profile component

--- a/client/src/app/items/item-profile.component.html
+++ b/client/src/app/items/item-profile.component.html
@@ -1,1 +1,6 @@
-<p>item-profile works!</p>
+<div fxLayout="row">
+  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+    <app-item-card [item]="this.item"></app-item-card>
+  </div>
+</div>
+
