--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,20 +5,20 @@
 
       <!-- Side navigation links -->
 
-      <a mat-list-item routerLink="/" routerLinkActive="drawer-list-item-active"
+      <a mat-list-product routerLink="/" routerLinkActive="drawer-list-product-active"
         #routerLinkActiveInstance="routerLinkActive" [attr.tabindex]="routerLinkActiveInstance.isActive ? 0 : -1"
         [routerLinkActiveOptions]="{exact: true}" (click)="drawer.close()">
         <mat-icon matListIcon>home</mat-icon>
         Home
       </a>
 
-      <a mat-list-item routerLink="/users" routerLinkActive="drawer-list-item-active" (click)="drawer.close()">
+      <a mat-list-product routerLink="/users" routerLinkActive="drawer-list-product-active" (click)="drawer.close()">
         <mat-icon matListIcon>people</mat-icon>
         Users
       </a>
-      <a mat-list-item routerLink="/items" routerLinkActive="drawer-list-item-active" (click)="drawer.close()">
+      <a mat-list-product routerLink="/products" routerLinkActive="drawer-list-product-active" (click)="drawer.close()">
         <mat-icon matListIcon>store_mall_directory</mat-icon>
-        Items
+        Products
       </a>
 
     </mat-nav-list>
