--- a/client/src/app/products/product-list.component.html
+++ b/client/src/app/products/product-list.component.html
@@ -2,7 +2,7 @@
   <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
 
     <mat-card class="search-card">
-      <mat-card-title class="item-list-title">Items</mat-card-title>
+      <mat-card-title class="product-list-title">Products</mat-card-title>
       <mat-card-content fxLayout="column" >
         <br>
         <div fxLayout="row wrap" fxLayoutGap="10px">
@@ -19,22 +19,22 @@
 </div>
 
 <div fxLayout="row">
-  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" *ngIf="serverFilteredItems; else itemsError" >
+  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" *ngIf="serverFilteredProducts; else productsError" >
     <!-- Switch between card and list view based on the viewType variable, set above in the mar-radio-group -->
     <div [ngSwitch]="viewType">
 
       <!-- Card grid view -->
-      <div *ngSwitchCase="'card'" fxLayout="row wrap" fxLayoutGap="10px" class="item-cards-container">
-        <app-item-card [simple]="true" *ngFor="let item of filteredItems" class="item-card" [item]="item" fxFlex="1 1 280px"></app-item-card>
+      <div *ngSwitchCase="'card'" fxLayout="row wrap" fxLayoutGap="10px" class="product-cards-container">
+        <app-product-card [simple]="true" *ngFor="let product of filteredProducts" class="product-card" [product]="product" fxFlex="1 1 280px"></app-product-card>
       </div>
 
       <!-- List view -->
       <mat-card *ngSwitchCase="'list'">
         <mat-card-content>
-          <mat-nav-list class="item-nav-list">
-            <h3 mat-subheader>Items</h3>
-            <a mat-list-item *ngFor="let item of this.filteredItems" [routerLink]="['/items', item._id]" class="item-list-item">
-              <h3 matLine class="item-list-name"> {{item.name}} </h3>
+          <mat-nav-list class="product-nav-list">
+            <h3 mat-subheader>Products</h3>
+            <a mat-list-item *ngFor="let product of this.filteredProducts" [routerLink]="['/products', product._id]" class="product-list-item">
+              <h3 matLine class="product-list-name"> {{product.name}} </h3>
             </a>
           </mat-nav-list>
         </mat-card-content>
@@ -44,10 +44,10 @@
   </div>
 
   <!-- Maybe this should be a pop-up instead of just a text message? Not sure. -->
-  <ng-template #itemsError>
-    <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="item-error">
+  <ng-template #productsError>
+    <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10" class="product-error">
       <mat-error>
-        There was a problem loading the items. Possibly the server is down or perhaps there are network
+        There was a problem loading the products. Possibly the server is down or perhaps there are network
         issues.
       </mat-error>
       <mat-error>
@@ -58,6 +58,6 @@
 
 </div>
 
-<button mat-fab class="add-item-fab" matTooltip="Add Item" matTooltipPosition="left" routerLink="/items/new" data-test="addItemButton">
-    <mat-icon class="md-24" aria-label="Add Item">add</mat-icon>
+<button mat-fab class="add-product-fab" matTooltip="Add Product" matTooltipPosition="left" routerLink="/products/new" data-test="addProductButton">
+    <mat-icon class="md-24" aria-label="Add Product">add</mat-icon>
 </button>
