--- a/client/src/app/products/product-profile.component.html
+++ b/client/src/app/products/product-profile.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row">
   <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
-    <app-item-card [item]="this.item"></app-item-card>
+    <app-product-card [product]="this.product"></app-product-card>
   </div>
 </div>
 
