--- a/client/src/app/products/add-product.component.html
+++ b/client/src/app/products/add-product.component.html
@@ -17,6 +17,16 @@
               </mat-error>
             </mat-error>
           </mat-form-field>
+          <mat-form-field>
+            <mat-label>Threshold</mat-label>
+            <input matInput placeholder="Threshold" formControlName="minThreshold" required>
+            <mat-error *ngFor="let validation of addProductValidationMessages.minThreshold">
+              <mat-error class="error-message" data-test="minThresholdError"
+                        *ngIf="addProductForm.get('minThreshold').hasError(validation.type) && (addProductForm.get('minThreshold').dirty || addProductForm.get('minThreshold').touched)">
+                {{validation.message}}
+              </mat-error>
+            </mat-error>
+          </mat-form-field>
 
           <!--
           <mat-form-field>
