--- a/client/src/app/products/product-list.component.html
+++ b/client/src/app/products/product-list.component.html
@@ -35,7 +35,7 @@
             <h3 mat-subheader>Products</h3>
             <a mat-list-item *ngFor="let product of this.filteredProducts" [routerLink]="['/products', product._id]" class="product-list-item">
               <h3 matLine class="product-list-name"> {{product.name}} </h3>
-              <p matLine class="product-list-threshold">{{product.minThreshold}}</p>
+              <p matLine class="product-list-threshold">{{product.threshold}}</p>
             </a>
           </mat-nav-list>
         </mat-card-content>
