Trying renaming again? it has been very difficult

--- a/client/src/app/products/add-product.component.html
+++ b/client/src/app/products/add-product.component.html
@@ -18,8 +18,8 @@
             </mat-error>
           </mat-form-field>
           <mat-form-field>
-            <mat-label>threshold</mat-label>
-            <input matInput placeholder="threshold" formControlName="threshold">
+            <mat-label>Threshold</mat-label>
+            <input matInput placeholder="Threshold" formControlName="threshold">
             <mat-error *ngFor="let validation of addProductValidationMessages.threshold">
               <mat-error class="error-message" data-test="thresholdError"
                         *ngIf="addProductForm.get('threshold').hasError(validation.type) && (addProductForm.get('threshold').dirty || addProductForm.get('threshold').touched)">
