--- a/client/src/app/pantry/pantry-card.component.html
+++ b/client/src/app/pantry/pantry-card.component.html
@@ -1,1 +1,10 @@
-<p>pantry-card works!</p>
+<mat-card class="pantry-card" *ngIf="this.pantry">
+  <mat-card-header>
+    <mat-card-title class="pantry-card-product">{{ this.pantry.product }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content *ngIf="!this.simple">
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button data-test="viewProfileButton" *ngIf="this.simple" [routerLink]="['/pantry', this.pantry._id]">View Profile</button>
+  </mat-card-actions>
+</mat-card>
