Create design for pantry-profile.component

--- a/client/src/app/pantry/pantry-profile.component.html
+++ b/client/src/app/pantry/pantry-profile.component.html
@@ -1,1 +1,6 @@
-<p>pantry-profile works!</p>
+<div fxLayout="row">
+  <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
+    <app-pantry-card [product]="this.pantry"></app-pantry-card>
+  </div>
+</div>
+
