Change pantry form fields so that it only contains id and product_id

--- a/client/src/app/pantry/pantry-card.component.html
+++ b/client/src/app/pantry/pantry-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="pantry-card" *ngIf="this.pantry">
   <mat-card-header>
-    <mat-card-title class="pantry-card-product">{{ this.pantry.product }}</mat-card-title>
+    <mat-card-title class="pantry-card-productId">{{ this.pantry.productId }}</mat-card-title>
   </mat-card-header>
   <mat-card-content *ngIf="!this.simple">
   </mat-card-content>
