--- a/client/src/app/pantry/pantry-profile.component.html
+++ b/client/src/app/pantry/pantry-profile.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row">
   <div fxFlex fxFlex.gt-sm="80" fxFlexOffset.gt-sm="10">
-    <app-pantry-card [productId]="this.pantry"></app-pantry-card>
+    <app-pantry-card [pantry]="this.pantry"></app-pantry-card>
   </div>
 </div>
 
