--- a/client/src/app/products/add-product.component.html
+++ b/client/src/app/products/add-product.component.html
@@ -20,7 +20,7 @@
           <mat-form-field>
             <mat-label>Threshold</mat-label>
             <input matInput placeholder="Threshold" formControlName="threshold">
-            <mat-error *ngFor="let validation of addProductValidationMessages.threshold">
+            <mat-error *ngFor="let validation of addProductValidationMessages.threshold" required>
               <mat-error class="error-message" data-test="thresholdError"
                         *ngIf="addProductForm.get('threshold').hasError(validation.type) && (addProductForm.get('threshold').dirty || addProductForm.get('threshold').touched)">
                 {{validation.message}}
